# Taskbeard

./: .env.production  .gitignore  README.md  Taskbeard.code-workspace  main.py  pyproject.toml
.cursor/commands/: addfeature.md  bugfix.md
.cursor/rules/: playwright-tests.mdc
.github/: copilot-instructions.md
.taskmanagement/: runtime.json
backend/app/: main.py
backend/app/api/: auth.py  config.py  dependencies.py  events.py  tasks.py
backend/app/services/: auth_service.py  file_watch_service.py  planner_service.py  snapshot_service.py  yaml_store.py
data/: auth.yaml.example  breaks.yaml  colors.yaml  events.yaml  members.yaml  practices.yaml  season.yaml  tasks.yaml  teams.yaml
data/config/: practices.yaml  teams.yaml
docs/: bugs.md  data-model.md  deploy-ubuntu-nginx.md  full-plan.md  todo.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: drag-dnd.e2e.ts  drag-menu.e2e.ts  drag-menu.spec.ts  grid-alignment-live.e2e.ts  grid-alignment.spec.ts  team-row-bg.spec.ts  toolbar-layout.spec.ts
frontend/src/: App.test.ts  App.test.tsx  App.tsx  styles.css  styles.grid-alignment.test.ts  styles.override-highlight.test.ts
frontend/src/components/: StudentPanel.tsx  TimelineGrid.test.tsx  TimelineGrid.tsx  Toast.tsx
frontend/src/pages/: BoardPage.tsx  ConfigPage.test.tsx  ConfigPage.tsx  LoginPage.tsx  NotAuthorizedPage.tsx  TaskListPage.test.tsx  (+2 more)
tests/backend/: test_auth_service.py  test_planner_service.py  test_tasks_polymorphic.py  test_yaml_store.py
(+3 files in other folders)
