[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Taskbeard"
version = "0.5.0"
description = "Simple project-management for FRC teams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"click==8.2.1",
	"fastapi==0.116.1",
	"pytest==8.4.1",
	"pyyaml==6.0.2",
	"uvicorn[standard]==0.35.0",
	"watchfiles==1.1.0",
]

[project.scripts]
start = "main:start_cli"
stop = "main:stop_cli"
restart = "main:restart_cli"

[tool.setuptools]
py-modules = ["main"]
